testcases/bindgen/11/error_message.txt
error[E0310]: the parameter type `ObjectType` may not live long enough                                                                                                                                                                   
  --> /Users/runner/work/rust-bindgen/rust-bindgen/tests/expectations/tests/libclang-4/objc_template.rs:34:9
   |
29 | pub trait IFoo<ObjectType>: Sized + std::ops::Deref {
   |                ---------- help: consider adding an explicit lifetime bound...: `ObjectType: 'static`
...
34 |         msg_send!(*self, get)
   |         ^^^^^^^^^^^^^^^^^^^^^ ...so that the type `*mut ObjectType` will meet its required lifetime bounds